--- a/app/table.html
+++ b/app/table.html
@@ -8,21 +8,18 @@
   </head>
   <body>
     <div class="container-fluid">
-      <div class="row align-items-center">
+      <div class="row align-items">
 
-        <div class="col-3">
-        </div>
-
-        <div class="col-6">
-
-          <div class="p-5">
-            <form action="/" enctype="multipart/form-data" method="post">
+        <div class="col-3 p-5">
+            <form action="/add" enctype="multipart/form-data" method="post">
                 <input name="file" type="file" multiple>
                 <input type="submit">
             </form>
-          </div>
+        </div>
 
+        <div class="col-6 p-5">
           <table class="table">
+
             <thead>
               <tr>
                 <th scope="col">№</th>
@@ -31,25 +28,41 @@
                 <th scope="col">IDF</th>
               </tr>
             </thead>
-            <tbody>
 
+            <tbody>
              {% for i in range(length) %}
                 <tr>
-
                   <th scope="row">{{ i+1 }}</th>
                   <td>{{ result[i][0] }}</td>
                   <td>{{ result[i][1]['TF'] }}</td>
                   <td>{{ result[i][1]['IDF'] }}</td>
-
                 </tr>
             {% endfor %}
-
             </tbody>
-          </table>
 
+          </table>
         </div>
 
-        <div class="col-3">
+        <div class="col-3 p-5">
+          <table>
+
+            <thead>
+              <tr>
+                <th scope="col">название</th>
+                <th scope="col">количество слов</th>
+              </tr>
+            </thead>
+
+            <thead>
+              {% for file in all_files %}
+                <tr>
+                  <td>{{ file.file_name }}</td>
+                  <td>{{ file.number_word }}</td>
+                </tr>
+              {% endfor %}
+            </thead>
+
+          </table>
         </div>
         </div>
 
